feat: Refactor main application structure and add new gameplay features
- Changed main entry point to use App component instead of KinkDareApp.
- Introduced ConsentSetup component for managing player consents.
- Added GamePlay component to handle the main game logic and interactions.
- Created InventorySetup component for managing available tools.
- Implemented LandingPage for initial user interaction.
- Developed PlayerSetup component for adding and managing players.
- Added PreferencesSetup component for setting player preferences.
- Created utility functions for game logic and session storage management.
- Enhanced Tailwind CSS configuration with custom colors, fonts, and animations.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
+    "lucide-react": "^0.556.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
